; ModuleID = '/home/carl/AnghaBench/php-src/ext/pcre/pcre2lib/sljit/extr_sljitNativeTILEGX_64.c_push_0_buffer.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/pcre/pcre2lib/sljit/extr_sljitNativeTILEGX_64.c_push_0_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tilegx_opcode = type { i32 }
%struct.TYPE_2__ = type { i32, i64, i64, i32, %struct.tilegx_opcode* }
%struct.sljit_compiler = type { i32 }

@inst_buf_index = common dso_local global i64 0, align 8
@TILEGX_MAX_INSTRUCTIONS_PER_BUNDLE = common dso_local global i64 0, align 8
@tilegx_opcodes = common dso_local global %struct.tilegx_opcode* null, align 8
@inst_buf = common dso_local global %struct.TYPE_2__* null, align 8
@SLJIT_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sljit_compiler*, i64, i32)* @push_0_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @push_0_buffer(%struct.sljit_compiler* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.sljit_compiler*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.tilegx_opcode*, align 8
  store %struct.sljit_compiler* %0, %struct.sljit_compiler** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i64, i64* @inst_buf_index, align 8
  %9 = load i64, i64* @TILEGX_MAX_INSTRUCTIONS_PER_BUNDLE, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load %struct.sljit_compiler*, %struct.sljit_compiler** %4, align 8
  %13 = call i32 @update_buffer(%struct.sljit_compiler* %12)
  %14 = call i32 @FAIL_IF(i32 %13)
  br label %15

15:                                               ; preds = %11, %3
  %16 = load %struct.tilegx_opcode*, %struct.tilegx_opcode** @tilegx_opcodes, align 8
  %17 = load i64, i64* %5, align 8
  %18 = getelementptr inbounds %struct.tilegx_opcode, %struct.tilegx_opcode* %16, i64 %17
  store %struct.tilegx_opcode* %18, %struct.tilegx_opcode** %7, align 8
  %19 = load %struct.tilegx_opcode*, %struct.tilegx_opcode** %7, align 8
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** @inst_buf, align 8
  %21 = load i64, i64* @inst_buf_index, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i64 %21
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 4
  store %struct.tilegx_opcode* %19, %struct.tilegx_opcode** %23, align 8
  %24 = load %struct.tilegx_opcode*, %struct.tilegx_opcode** %7, align 8
  %25 = call i32 @get_any_valid_pipe(%struct.tilegx_opcode* %24)
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** @inst_buf, align 8
  %27 = load i64, i64* @inst_buf_index, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 3
  store i32 %25, i32* %29, align 8
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @inst_buf, align 8
  %31 = load i64, i64* @inst_buf_index, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 2
  store i64 0, i64* %33, align 8
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** @inst_buf, align 8
  %35 = load i64, i64* @inst_buf_index, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i64 %35
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 1
  store i64 0, i64* %37, align 8
  %38 = load i32, i32* %6, align 4
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** @inst_buf, align 8
  %40 = load i64, i64* @inst_buf_index, align 8
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i64 %40
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  store i32 %38, i32* %42, align 8
  %43 = load i64, i64* @inst_buf_index, align 8
  %44 = add i64 %43, 1
  store i64 %44, i64* @inst_buf_index, align 8
  %45 = load i32, i32* @SLJIT_SUCCESS, align 4
  ret i32 %45
}

declare dso_local i32 @FAIL_IF(i32) #1

declare dso_local i32 @update_buffer(%struct.sljit_compiler*) #1

declare dso_local i32 @get_any_valid_pipe(%struct.tilegx_opcode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
